--- a/pages/mpagos.html
+++ b/pages/mpagos.html
@@ -36,8 +36,34 @@
                         <input class="form-control me-2" type="search" placeholder="¿Qué estás buscando?"
                             aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
-                        <a href="/pages/carrito.html"><i class="bi bi-cart4"></i></a>
                     </form>
+                    <!-- ! Carrito -->
+                    <div class="dropdown dropstart">
+                        <a type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-cart4"></i>
+                        </a>
+                        <ul id="carrito" class="dropdown-menu mx-2">
+                            <table id="lista-carrito" class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Imagen</th>
+                                        <th scope="col">Nombre</th>
+                                        <th scope="col">Precio</th>
+                                        <th scope="col"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <div class="d-grid gap-2 d-md-block justigy-content-md-center ms-1">
+                                <button id="vaciar-carrito" class="btn btn-primary">Vaciar Carrito</button>
+                                <button id="procesar-pedido" class="btn btn-danger">Procesar Compra</button>
+                            </div>
+                        </ul>
+                    </div>
+                    <!-- ! fin carrito -->
                 </div>
             </nav> <!--  -->
         </div>
