elimino estructura de carrito

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -38,33 +38,8 @@
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
 
-                    
+
                     <!-- ! Carrito -->
-                    <!-- <div class="dropdown dropstart">
-                        <a type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi bi-cart4"></i>
-                        </a>
-                        <ul id="carrito" class="dropdown-menu mx-2">
-                            <table id="lista-carrito" class="table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">Imagen</th>
-                                        <th scope="col">Nombre</th>
-                                        <th scope="col">Precio</th>
-                                        <th scope="col"></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <div class="d-grid gap-2 d-md-block justigy-content-md-center ms-1">
-                                <button id="vaciar-carrito" class="btn btn-primary">Vaciar Carrito</button>
-                                <button id="procesar-pedido" class="btn btn-danger">Procesar Compra</button>
-                            </div>
-                        </ul>
-                    </div> -->
                     <!-- ! fin carrito -->
                 </div>
             </nav> <!--  -->
@@ -83,82 +58,9 @@
                                     <h1>Productos</h1>
                                 </div>
 
-                                <hr class="my-4">
+                                <div id="lista-compra">
 
-                                <div class="row d-flex align-items-center ">
-                                    <div class="col-md-2">
-                                        <img src="../public/imgs/celulares/ph-1.jpg" class="img-fluid" alt="">
-                                    </div>
-                                    <div class="col-md-4">
-                                        <h6 class="text-muted">Smartphones</h6>
-                                        <h6>Redmi 10 2022</h6>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <select class="form-select cart">
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                        </select>
-                                    </div>
-                                    <div class="col-md-3 d-flex justify-content-center">
-                                        <h6>$155.900</h6>
-                                    </div>
-                                    <div class="col-md-1 justify-content-center">
-                                        <a href="#" class="text-muted"><i class="bi bi-trash3"></i></a>
-                                    </div>
-                                </div>
-
-                                <hr class="my-4">
-
-                                <div class="row d-flex align-items-center ">
-                                    <div class="col-md-2">
-                                        <img src="../public/imgs/accesorios/auriculares.jpg" class="img-fluid" alt="">
-                                    </div>
-                                    <div class="col-md-4">
-                                        <h6 class="text-muted">Auriculares</h6>
-                                        <h6>Buds 3T Pro</h6>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <select class="form-select cart">
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                        </select>
-                                    </div>
-                                    <div class="col-md-3 d-flex justify-content-center">
-                                        <h6>$127.900</h6>
-                                    </div>
-                                    <div class="col-md-1 justify-content-center">
-                                        <a href="#" class="text-muted"><i class="bi bi-trash3"></i></a>
-                                    </div>
-                                </div>
-
-                                <hr class="my-4">
-
-                                <div class="row d-flex align-items-center ">
-                                    <div class="col-md-2">
-                                        <img src="../public/imgs/computacion/tablet.jpg" class="img-fluid" alt="">
-                                    </div>
-                                    <div class="col-md-4">
-                                        <h6 class="text-muted">Tablet</h6>
-                                        <h6>Tablet Xiaomi Pad 5</h6>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <select class="form-select cart">
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                        </select>
-                                    </div>
-                                    <div class="col-md-3 d-flex justify-content-center">
-                                        <h6>$461.900</h6>
-                                    </div>
-                                    <div class="col-md-1 justify-content-center">
-                                        <a href="#" class="text-muted"><i class="bi bi-trash3"></i></a>
-                                    </div>
-                                </div>
-
-
+                                </div> <!-- fin lista compra -->
                             </div>
 
                             <div class="col-4 bg-color p-3">
