agrego data-id a productos

--- a/pages/productos/accesorios-1.html
+++ b/pages/productos/accesorios-1.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Buds 3T Pro</strong>
+                        <strong data-id="accesorios">Buds 3T Pro</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$127.900</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
