--- a/pages/productos/accesorios-2.html
+++ b/pages/productos/accesorios-2.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Scooter Eléctrico Xiaomi 3</strong>
+                        <strong data-id="accesorios">Scooter Eléctrico Xiaomi 3</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$671.900</span>
                             <span class="text-decoration-line-through">$791.000</span> <!-- espaciado entre precios -->
