--- a/pages/productos/accesorios-4.html
+++ b/pages/productos/accesorios-4.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Smart Watch Redmi 2</strong>
+                        <strong data-id="accesorios">Smart Watch Redmi 2</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$82.900</span>
                             <span class="text-decoration-line-through">$92.100</span> <!-- espaciado entre precios -->
