--- a/pages/productos/accesorios-6.html
+++ b/pages/productos/accesorios-6.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Cable USB-C a USB-A Xiaomi Braided (1m)</strong>
+                        <strong data-id="accesorios">Cable USB-C a USB-A Xiaomi Braided (1m)</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$6599</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
