--- a/pages/productos/computacion-1.html
+++ b/pages/productos/computacion-1.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Tablet Xiaomi Pad 5 6GB RAM</strong>
+                        <strong data-id="computacion">Tablet Xiaomi Pad 5 6GB RAM</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$461.900</span>
                             <span class="text-decoration-line-through">$552.000</span> <!-- espaciado entre precios -->
