--- a/pages/productos/computacion-2.html
+++ b/pages/productos/computacion-2.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Xiaomi Mi Tablet de Escritura 13,5"</strong>
+                        <strong data-id="computacion">Xiaomi Mi Tablet de Escritura 13,5"</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$33.200</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
