--- a/pages/productos/computacion-3.html
+++ b/pages/productos/computacion-3.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Mouse Inalámbrico Xiaomi Mi Dual Mode Silent Edition</strong>
+                        <strong data-id="computacion">Mouse Inalámbrico Xiaomi Mi Dual Mode Silent Edition</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$17.899</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
