--- a/pages/productos/computacion-4.html
+++ b/pages/productos/computacion-4.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Xiaomi Smart Pen</strong>
+                        <strong data-id="computacion">Xiaomi Smart Pen</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$115.900</span>
                             <span class="text-decoration-line-through">$125.999</span> <!-- espaciado entre precios -->
