--- a/pages/productos/smartphone-2.html
+++ b/pages/productos/smartphone-2.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Xiaomi 11T Pro</strong>
+                        <strong data-id="smartphone">Xiaomi 11T Pro</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$631.900</span>
                             <span class="text-decoration-line-through">$670.900</span> <!-- espaciado entre precios -->
