--- a/pages/productos/smartphone-4.html
+++ b/pages/productos/smartphone-4.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Redmi Note 11S 6GB RAM</strong>
+                        <strong data-id="smartphone">Redmi Note 11S 6GB RAM</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$350.900</span>
                             <span class="text-decoration-line-through">$375.900</span> <!-- espaciado entre precios -->
