--- a/pages/productos/smartphone-5.html
+++ b/pages/productos/smartphone-5.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Redmi 10A 2GB RAM</strong>
+                        <strong data-id="smartphone">Redmi 10A 2GB RAM</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$95.899</span>
                             <span class="text-decoration-line-through">$99.900</span> <!-- espaciado entre precios -->
