--- a/pages/productos/smartphone-6.html
+++ b/pages/productos/smartphone-6.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Xiaomi 11T 8GB RAM </strong>
+                        <strong data-id="smartphone">Xiaomi 11T 8GB RAM </strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$498.900</span>
                             <span class="text-decoration-line-through">$552.000</span> <!-- espaciado entre precios -->
