--- a/pages/productos/accesorios-3.html
+++ b/pages/productos/accesorios-3.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Xiaomi Watch S1 Active GL</strong>
+                        <strong data-id="accesorios">Xiaomi Watch S1 Active GL</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$196.900</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
