--- a/pages/productos/accesorios-5.html
+++ b/pages/productos/accesorios-5.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Xiaomi 10W Wireless Power Bank 10000</strong>
+                        <strong data-id="accesorios">Xiaomi 10W Wireless Power Bank 10000</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$40.199</span>
                             <span class="text-decoration-line-through"></span> <!-- espaciado entre precios -->
