--- a/pages/productos/smartphone-1.html
+++ b/pages/productos/smartphone-1.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Redmi 10 2022 4GB RAM</strong>
+                        <strong data-id="smartphone">Redmi 10 2022 4GB RAM</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$155.900</span>
                             <span class="text-decoration-line-through">$184.900</span> <!-- espaciado entre precios -->
