--- a/pages/productos/smartphone-3.html
+++ b/pages/productos/smartphone-3.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="p-4">
-                        <strong>Redmi Note 11 Pro+</strong>
+                        <strong data-id="smartphone">Redmi Note 11 Pro+</strong>
                         <div class="precios pb-5 pt-2">
                             <span class="me-4 ">$399.900</span>
                             <span class="text-decoration-line-through">$420.000</span> <!-- espaciado entre precios -->
